--- a/HW/HW2/HarrisRansom_InfonetSecHW2.ipynb
+++ b/HW/HW2/HarrisRansom_InfonetSecHW2.ipynb
@@ -145,9 +145,10 @@
     "\n",
     "# Choose p, q, seed\n",
     "# p = q = 3 (mod 4)\n",
+    "p = 4, q = 4\n",
+    "# TODO: Check if p, q are prime\n",
     "p = (random.randint(100000000, 10000000000) * 4) + 3 \n",
     "q = (random.randint(100000000, 10000000000) * 4) + 3\n",
-    "n = p * q\n",
     "seed = int(((datetime.now() - datetime(1970, 1, 1)).total_seconds()) * (10**6)) # Unix timestamp\n",
     "while (not coprime(n, seed)):\n",
     "\tseed = int(((datetime.now() - datetime(1970, 1, 1)).total_seconds()) * (10**6))\n",
