Finished up to HW2 Q3

--- a/HW/HW2/HarrisRansom_InfonetSecHW2.ipynb
+++ b/HW/HW2/HarrisRansom_InfonetSecHW2.ipynb
@@ -20,15 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "id": "759f01fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Imports\n",
     "from datetime import datetime\n",
-    "from math import gcd\n",
-    "import random"
+    "from math import gcd, sqrt\n",
+    "import random\n",
+    "import numpy as np"
    ]
   },
   {
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "id": "fab6cd6d",
    "metadata": {},
    "outputs": [
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "id": "d5815c6c",
    "metadata": {},
    "outputs": [
@@ -113,14 +114,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of 0s: 500823\n",
-      "Number of (0,0) pairs: 250878\n",
-      "Frequency of 0s: 0.500823\n",
-      "Frequency of (0,0) pairs: 0.2508782508782509\n"
+      "Number of 0s: 499077\n",
+      "Number of (0,0) pairs: 248849\n",
+      "Frequency of 0s: 0.499077\n",
+      "Frequency of (0,0) pairs: 0.24884924884924886\n"
      ]
     }
    ],
    "source": [
+    "# Helper function to check if a number is prime\n",
+    "def isPrime(n):\n",
+    "    prime_flag = 0\n",
+    "\n",
+    "    if(n > 1):\n",
+    "        for i in range(2, int(sqrt(n)) + 1):\n",
+    "            if (n % i == 0):\n",
+    "                prime_flag = 1\n",
+    "                break\n",
+    "        if (prime_flag == 0):\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
     "# Helper function to check if two numbers are relatively prime\n",
     "def coprime(a, b):\n",
     "    return gcd(a, b) == 1\n",
@@ -145,11 +162,14 @@
     "\n",
     "# Choose p, q, seed\n",
     "# p = q = 3 (mod 4)\n",
-    "p = 4, q = 4\n",
-    "# TODO: Check if p, q are prime\n",
-    "p = (random.randint(100000000, 10000000000) * 4) + 3 \n",
+    "p = (random.randint(100000000, 10000000000) * 4) + 3\n",
+    "if (not isPrime(p)):\n",
+    "    p = (random.randint(100000000, 10000000000) * 4) + 3\n",
     "q = (random.randint(100000000, 10000000000) * 4) + 3\n",
+    "if (not isPrime(q)):\n",
+    "    q = (random.randint(100000000, 10000000000) * 4) + 3\n",
     "seed = int(((datetime.now() - datetime(1970, 1, 1)).total_seconds()) * (10**6)) # Unix timestamp\n",
+    "n = p*q\n",
     "while (not coprime(n, seed)):\n",
     "\tseed = int(((datetime.now() - datetime(1970, 1, 1)).total_seconds()) * (10**6))\n",
     "\n",
@@ -201,11 +221,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b4fd7f9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialization Vector: [1 1 1 0 0 1 1 0 1 0 1 1]\n",
+      "Number of 0s: 2047\n",
+      "Number of (0,0) pairs: 1023\n",
+      "Frequency of 0s: 0.4998778998778999\n",
+      "Frequency of (0,0) pairs: 0.24987787005373718\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LFSR Implementation (c)\n",
+    "def LFSR(initialBits, N, table=False):\n",
+    "\tif (len(initialBits) != 12):\n",
+    "\t\traise ValueError(\"Initial bits must be 12 bits long\")\n",
+    "\t\n",
+    "\t# Initialize LFSR\n",
+    "\tstate = initialBits\n",
+    "\n",
+    "\t# Calculate random bits\n",
+    "\t# Coefficients (n-i): 4, 10, 11, 12\n",
+    "\toutputBits = []\n",
+    "\tif (table): \n",
+    "\t\tprint(\"State: \\t \\t \\t \\t Output:\")\n",
+    "\tfor i in range(0, N):\n",
+    "\t\tsum = (state[0] + state[1] + state[2] + state[8]) % 2\n",
+    "\t\tstate[0:11] = state[1:12]\n",
+    "\t\tstate[11] = sum\n",
+    "\t\toutputBits.append(sum)\n",
+    "\t\tif (table):\n",
+    "\t\t\tprint(f\"{state} \\t {sum}\")\n",
+    "\treturn outputBits\n",
+    "\n",
+    "# Generate bits with LFSR\n",
+    "#initialBits = np.array([0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, 0]) # For testing, this is statically set\n",
+    "initialBits = np.random.choice([0,1], 12)\n",
+    "while (not initialBits.any()):\n",
+    "    initialBits = np.random.choice([0,1], 12)\n",
+    "print(f\"Initialization Vector: {initialBits}\")\n",
+    "N = 4095\n",
+    "randomBits = LFSR(initialBits, N)\n",
+    "\n",
+    "# Calculate 0 and (0, 0) frequencies (d)\n",
+    "zeroCount = 0\n",
+    "zeroPairCount = 0\n",
+    "for i in range(0, len(randomBits) - 1):\n",
+    "\tif (randomBits[i] == 0):\n",
+    "\t\tzeroCount += 1\n",
+    "\t\tif (randomBits[i + 1] == 0):\n",
+    "\t\t\tzeroPairCount += 1\n",
+    "if (randomBits[-1] == 0):\n",
+    "\tzeroCount += 1\n",
+    "print(f\"Number of 0s: {zeroCount}\")\n",
+    "print(f\"Number of (0,0) pairs: {zeroPairCount}\")\n",
+    "freqZeros = zeroCount / len(randomBits)\n",
+    "freqZeroPairs = zeroPairCount / (len(randomBits) - 1)\n",
+    "print(f\"Frequency of 0s: {freqZeros}\")\n",
+    "print(f\"Frequency of (0,0) pairs: {freqZeroPairs}\")"
+   ]
   },
   {
    "cell_type": "markdown",
