HW2 final submission

--- a/HW/HW2/HarrisRansom_InfonetSecHW2.ipynb
+++ b/HW/HW2/HarrisRansom_InfonetSecHW2.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 81,
    "id": "759f01fb",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 82,
    "id": "fab6cd6d",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
    "id": "d5815c6c",
    "metadata": {},
    "outputs": [
@@ -114,10 +114,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of 0s: 499077\n",
-      "Number of (0,0) pairs: 248849\n",
-      "Frequency of 0s: 0.499077\n",
-      "Frequency of (0,0) pairs: 0.24884924884924886\n"
+      "Number of 0s: 499675\n",
+      "Number of (0,0) pairs: 249396\n",
+      "Frequency of 0s: 0.499675\n",
+      "Frequency of (0,0) pairs: 0.2493962493962494\n"
      ]
     }
    ],
@@ -163,10 +163,10 @@
     "# Choose p, q, seed\n",
     "# p = q = 3 (mod 4)\n",
     "p = (random.randint(100000000, 10000000000) * 4) + 3\n",
-    "if (not isPrime(p)):\n",
+    "while (not isPrime(p)):\n",
     "    p = (random.randint(100000000, 10000000000) * 4) + 3\n",
     "q = (random.randint(100000000, 10000000000) * 4) + 3\n",
-    "if (not isPrime(q)):\n",
+    "while (not isPrime(q)):\n",
     "    q = (random.randint(100000000, 10000000000) * 4) + 3\n",
     "seed = int(((datetime.now() - datetime(1970, 1, 1)).total_seconds()) * (10**6)) # Unix timestamp\n",
     "n = p*q\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 84,
    "id": "b4fd7f9c",
    "metadata": {},
    "outputs": [
@@ -229,11 +229,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialization Vector: [1 1 1 0 0 1 1 0 1 0 1 1]\n",
+      "Initialization Vector: [0 1 1 0 1 1 0 1 0 0 0 1]\n",
       "Number of 0s: 2047\n",
-      "Number of (0,0) pairs: 1023\n",
+      "Number of (0,0) pairs: 1022\n",
       "Frequency of 0s: 0.4998778998778999\n",
-      "Frequency of (0,0) pairs: 0.24987787005373718\n"
+      "Frequency of (0,0) pairs: 0.24963361016121152\n"
      ]
     }
    ],
@@ -245,6 +245,7 @@
     "\t\n",
     "\t# Initialize LFSR\n",
     "\tstate = initialBits\n",
+    "\tsum = (state[0] + state[1] + state[2] + state[8]) % 2\n",
     "\n",
     "\t# Calculate random bits\n",
     "\t# Coefficients (n-i): 4, 10, 11, 12\n",
@@ -252,9 +253,9 @@
     "\tif (table): \n",
     "\t\tprint(\"State: \\t \\t \\t \\t Output:\")\n",
     "\tfor i in range(0, N):\n",
-    "\t\tsum = (state[0] + state[1] + state[2] + state[8]) % 2\n",
     "\t\tstate[0:11] = state[1:12]\n",
     "\t\tstate[11] = sum\n",
+    "\t\tsum = (state[0] + state[1] + state[2] + state[8]) % 2\n",
     "\t\toutputBits.append(sum)\n",
     "\t\tif (table):\n",
     "\t\t\tprint(f\"{state} \\t {sum}\")\n",
@@ -305,7 +306,111 @@
     "x_i = c_i x_{i-1} + ... + c_m x_{i-m} (\\text{mod} 2)\n",
     "$$\n",
     "\n",
-    "We can show that, if the number of non-zero coefficients is odd, then the recurrence will not generate a maximal-length sequence. TODO"
+    "We can show that, if the number of non-zero coefficients is odd, then the recurrence will not generate a maximal-length sequence by providing a counterexample. \n",
+    "\n",
+    "Take, for example, the LFSR $x_n = x_{n-3} + x_{n-4} + x_{n-5} (\\text{mod} 2)$. This has an odd number of coefficients (3), and, by using the code below, we can verify that it generates a non-maximal sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "0a1c3451",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State: \t \t \t \t Output:\n",
+      "[1, 0, 0, 0, 1] \t 1\n",
+      "[0, 0, 0, 1, 1] \t 0\n",
+      "[0, 0, 1, 1, 0] \t 1\n",
+      "[0, 1, 1, 0, 1] \t 0\n",
+      "[1, 1, 0, 1, 0] \t 0\n",
+      "[1, 0, 1, 0, 0] \t 0\n",
+      "[0, 1, 0, 0, 0] \t 1\n",
+      "[1, 0, 0, 0, 1] \t 1\n",
+      "[0, 0, 0, 1, 1] \t 0\n",
+      "[0, 0, 1, 1, 0] \t 1\n",
+      "[0, 1, 1, 0, 1] \t 0\n",
+      "[1, 1, 0, 1, 0] \t 0\n",
+      "[1, 0, 1, 0, 0] \t 0\n",
+      "[0, 1, 0, 0, 0] \t 1\n",
+      "[1, 0, 0, 0, 1] \t 1\n",
+      "[0, 0, 0, 1, 1] \t 0\n",
+      "[0, 0, 1, 1, 0] \t 1\n",
+      "[0, 1, 1, 0, 1] \t 0\n",
+      "[1, 1, 0, 1, 0] \t 0\n",
+      "[1, 0, 1, 0, 0] \t 0\n",
+      "[0, 1, 0, 0, 0] \t 1\n",
+      "[1, 0, 0, 0, 1] \t 1\n",
+      "[0, 0, 0, 1, 1] \t 0\n",
+      "[0, 0, 1, 1, 0] \t 1\n",
+      "[0, 1, 1, 0, 1] \t 0\n",
+      "[1, 1, 0, 1, 0] \t 0\n",
+      "[1, 0, 1, 0, 0] \t 0\n",
+      "[0, 1, 0, 0, 0] \t 1\n",
+      "[1, 0, 0, 0, 1] \t 1\n",
+      "[0, 0, 0, 1, 1] \t 0\n",
+      "[0, 0, 1, 1, 0] \t 1\n",
+      "[0, 1, 1, 0, 1] \t 0\n",
+      "[1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generalizes LFSR to m bits\n",
+    "def GenericLFSR(initialBits, m, coeffs, N, table=False):\n",
+    "\tif (len(initialBits) != m):\n",
+    "\t\traise ValueError(f\"Initial bits must be {m} bits long\")\n",
+    "\tif (len(coeffs) > m):\n",
+    "\t\traise ValueError(f\"Too many coefficients! ({len(coeffs)} > m)\")\n",
+    "\n",
+    "\t# Initialize LFSR\n",
+    "\tstate = initialBits\n",
+    "\tsum = 0\n",
+    "\tfor j in range(0, len(coeffs)):\n",
+    "\t\t\tsum += state[m - coeffs[j]]\n",
+    "\tsum = sum % 2\n",
+    "\n",
+    "\t# Calculate random bits\n",
+    "\toutputBits = []\n",
+    "\tif (table): \n",
+    "\t\tprint(\"State: \\t \\t \\t \\t Output:\")\n",
+    "\tfor i in range(0, N):\n",
+    "\t\t# Shift register left\n",
+    "\t\tstate[0:m-1] = state[1:m]\n",
+    "\t\tstate[m-1] = sum\n",
+    "\n",
+    "\t\t# Find sum\n",
+    "\t\tsum = 0\n",
+    "\t\tfor j in range(0, len(coeffs)):\n",
+    "\t\t\tsum += state[m - coeffs[j]]\n",
+    "\t\tsum = sum % 2\n",
+    "\n",
+    "\t\t# Add to list\n",
+    "\t\toutputBits.append(sum)\n",
+    "\t\tif (table):\n",
+    "\t\t\tprint(f\"{state} \\t {sum}\")\n",
+    "\treturn outputBits\n",
+    "\n",
+    "# Generic LFSR testing\n",
+    "m = 5\n",
+    "N = 2**m\n",
+    "#initialBits = np.random.choice([0,1], m)\n",
+    "#while (not initialBits.any()):\n",
+    "#\tinitialBits = np.random.choice([0,1], m)\n",
+    "initialBits = [0, 1, 0, 0 ,0]\n",
+    "randomBits = GenericLFSR(initialBits, m, [3, 4, 5], N, table=True)\n",
+    "print(randomBits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4ae0498",
+   "metadata": {},
+   "source": [
+    "We can see that this LFSR has a period of 7 rounds, with the first and seventh round having the state `[1,0,0,0,1]` in the first and eighth rounds."
    ]
   }
  ],
