--- a/HW/HW3/HarrisRansom_InfonetSecurityHW3.ipynb
+++ b/HW/HW3/HarrisRansom_InfonetSecurityHW3.ipynb
@@ -334,13 +334,41 @@
     "    - $q_1 = 2, q_2 = 3$\n",
     "    - $r_1 = 2, r_2 = 1$\n",
     "\n",
+    "|q|e|$$g^{\\dfrac{p-1}{q^e}}$$|$$h^{\\dfrac{p-1}{q^e}}$$|\n",
+    "|-|-|-----------------|-----------------|\n",
+    "|2|2|8|1728|\n",
+    "|3|1|16|20736|\n",
+    "\n",
     "We can first solve for $x_{q2} = x_0 + 2x_1$ and then for $x_{q3} = x_0$.\n",
     "\n",
-    "Solving for $x = x_0 + 2x_1$:\n",
+    "Solving for $x = x_0 + 2x_1 (mod 2^2)$:\n",
     "- $b^{\\frac{p-1}{q}} \\equiv a^{x_0 \\frac{p-1}{q}} (\\text{mod } p)$\n",
     "    - $2^{6x_0} \\equiv 12^6 \\equiv 1 (\\text{mod } 13)$\n",
     "    - $x_0 = 0$\n",
-    "- "
+    "- $(a^{-x_0}b)^{\\frac{p-1}{q^2}} \\equiv a^{x_1 \\cdot \\frac{p-1}{q}} (\\text{mod } p)$\n",
+    "    - $b^{\\frac{p-1}{q^2}} \\equiv a^{x_1 \\cdot \\frac{p-1}{q}} (\\text{mod } p)$\n",
+    "    - $12^3 \\equiv 2^{6x_1} (\\text{mod } 13)$\n",
+    "    - $12 \\equiv 2^{6x_1} (\\text{mod } 13)$\n",
+    "    - $x_1 = 1$\n",
+    "- Combining coefficients: $x \\equiv x_0 + 2x_1 (\\text{mod } 2^2) = 2 (\\text{mod }4)$\n",
+    "\n",
+    "Solving for $x = x_0 (\\text{mod }3)$:\n",
+    "- $b^{\\frac{p-1}{q}} \\equiv a^{x_0 \\frac{p-1}{q}} (\\text{mod } p)$\n",
+    "    - $12^4 \\equiv 2^{4x_0} (\\text{mod } 13)$\n",
+    "    - $1 \\equiv 2^{4x_0} (\\text{mod } 13)$\n",
+    "    - $x_0 = 0$\n",
+    "$x \\equiv x_0 = 0 (\\text{mod }3)$\n",
+    "\n",
+    "We can use the Chinese Remainder Thoerem to solve for x:\n",
+    "- $x = 2(\\text{mod }4)$\n",
+    "- $x = 0(\\text{mod }3)$\n",
+    "- $x = 3x_1 + 4x_2$\n",
+    "    - $3x_1 = 2(\\text{mod }4)$\n",
+    "    - $x_1 = 2$\n",
+    "    - $4x_2 = 0(\\text{mod }3)$\n",
+    "    - $x_2 = 0$\n",
+    "- $x = 6$\n",
+    "    \n"
    ]
   },
   {
@@ -353,9 +381,11 @@
     "\n",
     "We know that $2^x \\equiv 12 (\\text{mod } 13)$ for $x = 6$. We also know that 2 is a primitive root mod 13.\n",
     "\n",
-    "We also know that $12 = 4 \\cdot 3 = 2^2 \\cdot 3$. Therefore, we can rewrite this as:\n",
-    "$ 2^x \\equiv 3 \\cdot 2^2 (\\text{mod } 3)$.\n",
-    "\n"
+    "From this, we can construct:\n",
+    "- $2^6 \\equiv 12 (\\text{mod } 13)$\n",
+    "- $2^4 \\equiv 3 (\\text{mod } 13)$\n",
+    "\n",
+    "Therefore, $x = 4$"
    ]
   }
  ],
