--- a/HW/HW4/HarrisRansom_InfonetSecurityHW4.ipynb
+++ b/HW/HW4/HarrisRansom_InfonetSecurityHW4.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "908e48f6",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,71 @@
     "# Imports\n",
     "import numpy as np\n",
     "import secrets\n",
+    "import hashlib\n",
+    "from math import gcd\n",
+    "import sympy\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1681e13-bdfe-46a8-b664-5d91f102a3c0",
+   "metadata": {},
+   "source": [
+    "## Helper Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "cf469a0d-0cf0-4990-bc5b-2b23373b81f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extended Euclidean Algorithm\n",
+    "def gcdExtended(a, b):\n",
+    "    # Base Case\n",
+    "    if a == 0:\n",
+    "        return b, 0, 1\n",
+    "    \n",
+    "    gcd, x1, y1 = gcdExtended(b % a, a)\n",
+    "        \n",
+    "    # Update x and y using results of recursive call\n",
+    "    x = y1 - (b//a) * x1\n",
+    "    y = x1\n",
+    "    return gcd, x, y\n",
+    "\n",
+    "# Implements modular inverse finder\n",
+    "def inverse_finder(a, n):\n",
+    "    isCoprime = (gcd(a,n) == 1)\n",
+    "    if (not isCoprime):\n",
+    "        raise ValueError(\"a and n are not coprime!\")\n",
+    "    _, x, y = gcdExtended(a, n)\n",
+    "    result = (x % n + n) % n\n",
+    "    return result\n",
+    "\n",
+    "# Implements efficient modular exponentiation algorithm\n",
+    "# returns (m ** e) % n\n",
+    "def exponentiation(m, e, n):\n",
+    "    r = 1 # Initialize result to 1\n",
+    "    e_bin = bin(e)[2:]\n",
+    "    for i in e_bin:\n",
+    "        r = (r**2) % n\n",
+    "        if (i == '1'):\n",
+    "            r = (r*m) % n\n",
+    "    return r\n",
+    "\n",
+    "# Helper function to compute a SHA3-256 hash of a message\n",
+    "def shaHash(m):\n",
+    "    # Create SHA3-256 hash object\n",
+    "    h = hashlib.sha3_256()\n",
+    "\n",
+    "    # Encode m\n",
+    "    m = str(m).encode()\n",
+    "\n",
+    "    # Return hash of m\n",
+    "    h.update(m)\n",
+    "    return h.hexdigest()"
    ]
   },
   {
@@ -41,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "id": "43fcfe35",
    "metadata": {},
    "outputs": [
@@ -49,28 +113,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Alice's Secret Integer (x): 5487378038450635394994717379382635018777995225597514570861399343569067271741\n",
-      "Bob's Secret Integer (y): 43154667238290840355444820841868758908351110189763566885474783087804354170102\n",
-      "Alice's Message (A): 20003914315725963909013446581118207239629802046484050318681142065741894001714\n",
-      "Bob's Message (B): 34483544054885597780830406017738702804268373630139936637131763414243184357192\n",
-      "Alice's Computed Key (Ka): 12010975684095365854478360701621999934053414961462977747575693557447126605299\n",
-      "Bob's Computed Key (Kb): 12010975684095365854478360701621999934053414961462977747575693557447126605299\n",
+      "Alice's Secret Integer (x): 22154383128226360424108748540258917568795639377044322853762896826702272548794\n",
+      "Bob's Secret Integer (y): 114076194838391609757540358024891046828944644658141348300488935902832966500786\n",
+      "Alice's Message (A): 100711379082281706897595169077822340133322185988097171620941867984902423472785\n",
+      "Bob's Message (B): 93024941944536752664109929246921171931182924937435024415241039521585661533448\n",
+      "Alice's Computed Key (Ka): 32071547943736115665050403073669512495348730700298905644579461665461232772058\n",
+      "Bob's Computed Key (Kb): 32071547943736115665050403073669512495348730700298905644579461665461232772058\n",
       "Computed keys match!\n"
      ]
     }
    ],
    "source": [
-    "# Implements efficient exponentiation algorithm\n",
-    "def exponentiation(m, e, n):\n",
-    "    # return (m ** e) % n\n",
-    "    r = 1 # Initialize result to 1\n",
-    "    e_bin = bin(e)[2:]\n",
-    "    for i in e_bin:\n",
-    "        r = (r**2) % n\n",
-    "        if (i == '1'):\n",
-    "            r = (r*m) % n\n",
-    "    return r\n",
-    "\n",
     "# Performs Diffie Hellman key exchange computations\n",
     "def DiffieHellman(alpha, p):\n",
     "    # Alice\n",
@@ -117,11 +170,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "e55b843c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob's private key k: 2\n",
+      "Ciphertext c: 1752\n",
+      "Recovered key k2: 2\n",
+      "Keys match!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: Finish RSA Key Exchange\n",
+    "# Generate a random prime number between a lower and upper bound\n",
+    "# See: https://stackoverflow.com/questions/21043075/generating-large-prime-numbers-in-python\n",
+    "def rand_prime(bits):\n",
+    "    while True:\n",
+    "        p = secrets.randbits(bits)\n",
+    "        if (sympy.isprime(p)):\n",
+    "            break\n",
+    "    return p\n",
+    "\n",
+    "# RSA Key Generation\n",
+    "def RSA_key_generate(p, q, e=17):\n",
+    "    phi = (p-1)*(q-1)\n",
+    "    if (gcd(e, phi) != 1) or (e >= phi):\n",
+    "        raise ValueError(\"Improper selection of p, q, or e!\")\n",
+    "    \n",
+    "    # Output/return keys\n",
+    "    n = p*q\n",
+    "    d = inverse_finder(e, phi)\n",
+    "    ke = (e, n)\n",
+    "    kd = (d, n)\n",
+    "    return ke, kd\n",
+    "\n",
+    "# Performs a secure key exchange using the RSA cryptosystem\n",
+    "def RSA_KeyExchange(p, q):\n",
+    "    # Bob generates a random private key k\n",
+    "    k = secrets.randbelow(64) # k has to be small to fit block length\n",
+    "    print(f\"Bob's private key k: {k}\")\n",
+    "    \n",
+    "    # Alice generates her public/private key pair\n",
+    "    # and sends this information to Bob\n",
+    "    ke, kd = RSA_key_generate(p, q)\n",
+    "\n",
+    "    # Bob encrypts k with ke\n",
+    "    e, n = ke\n",
+    "    c = exponentiation(k, e, n)\n",
+    "    print(f\"Ciphertext c: {c}\")\n",
+    "    \n",
+    "    # Bob sends ciphered key c to Alice\n",
+    "    # Alice decrypts c to recover k\n",
+    "    d, n, = kd\n",
+    "    k2 = exponentiation(c, d, n)\n",
+    "    print(f\"Recovered key k2: {k2}\")\n",
+    "    if (k2 == k):\n",
+    "        print(\"Keys match!\")\n",
+    "        return True\n",
+    "    print(\"Key's don't match!\")\n",
+    "    return False\n",
+    "\n",
+    "p = 61\n",
+    "q = 53\n",
+    "exchangeSuccess = RSA_KeyExchange(p, q)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,28 +250,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "b1af31db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alice PubKey: (102188617217178804476387977160129334431745945009730065519337094992129677228373, 2, 80899835145357920942494557661460664162703362290248426297364679347580434985080)\n",
+      "Alice PrivKey: 34712516988083379691081339589397865502385108947735648349202094734018948174231\n",
+      "Alice PubKey: (102188617217178804476387977160129334431745945009730065519337094992129677228373, 2, 74865874635444876744646439324670460003019675083857352028775754047844475467536)\n",
+      "Alice PrivKey: 66113823857655645046645684943973332772381990883652895801214949166338344308767\n",
+      "Unaltered Message Authentication Successful: True\n",
+      "Altered Message Authentication Successful: False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Implements ElGamal authentication scheme\n",
-    "def ElGamal(alpha, p, m=123456):\n",
-    "    # Bob keygen\n",
-    "    a = secrets.choice(np.arange(1, p-1)) # 1 <= a <= p-2\n",
-    "    beta = exponentiation(alpha, a, p) # Computes Beta for Bob's public key\n",
+    "# ElGamal key generation function\n",
+    "# p: Sufficiently large prime number\n",
+    "# alpha: Primitive root mod p\n",
+    "def ElGamalKeygen(alpha, p):\n",
+    "    a = secrets.randbelow(p-2) + 1 # 1 <= a <= p-2\n",
+    "    beta = exponentiation(alpha, a, p) # Computes Beta for the public key\n",
     "        # Public Key: (p, alpha, beta)\n",
     "        # Private key: a\n",
+    "    pubKey = (p, alpha, beta)\n",
+    "    privKey = a\n",
+    "    return pubKey, privKey\n",
+    "\n",
+    "# Implements signature generation for ElGamal authentication\n",
+    "def ElGamalSignatureGen(alpha, p, m):\n",
+    "    h = int(shaHash(m), 16) # Generate hash of message\n",
+    "    #print(f\"Generated message hash: {h}\")\n",
     "    \n",
-    "    # Alice sends message\n",
-    "    if (m >= p):\n",
-    "        raise ValueError(\"Message cannot be larger than prime modulus!\")\n",
-    "    k = secrets.choice(np.arange(1, p-1)) # 1 <= k <= p-2\n",
+    "    # Choose a secret k s.t. k and p-1 are coprime\n",
+    "    nums = np.arange(100, 100000)\n",
+    "    k = secrets.choice(nums)\n",
+    "    while (gcd(k, p-1) != 1):\n",
+    "        k = secrets.choice(nums)\n",
+    "\n",
+    "    # Generate public and private keys\n",
+    "    pubKey, privKey = ElGamalKeygen(alpha, p)\n",
+    "    \n",
+    "    # Calculate r and s\n",
     "    r = exponentiation(alpha, k, p)\n",
-    "    t = m * exponentiation(beta, k, p)\n",
-    "    c = (r, t) # Ciphertext\n",
+    "    kInv = inverse_finder(k, p-1)\n",
+    "    s = (kInv * (h - (privKey*r))) % (p-1)\n",
+    "\n",
+    "    return pubKey, privKey, r, s\n",
+    "\n",
+    "# Verifies an ElGamal authentication signature\n",
+    "def ElGamalSigVerify(pubKey, r, s, m):\n",
+    "    p, alpha, beta = pubKey\n",
+    "\n",
+    "    # Compute v1 and v2 values\n",
+    "    v1 = exponentiation(beta, r, p) * exponentiation(r, s, p)\n",
+    "    h2 = int(shaHash(m), 16)\n",
+    "    v2 = exponentiation(alpha, h2, p)\n",
+    "    #print(f\"Recovered message hash: {h2}\")\n",
+    "\n",
+    "    # Verify signature\n",
+    "    if (((v1 - v2) % p) == 0):\n",
+    "        #print(\"Signature successfully verified!\")\n",
+    "        return True\n",
+    "    else:\n",
+    "        #print(\"Signature not verified!\")\n",
+    "        return False\n",
+    "\n",
+    "# Implements ElGamal authentication scheme\n",
+    "def ElGamalAuth(alpha, p, m=123456, alterMessage=False):\n",
+    "    # Alice signature generation\n",
+    "    pubKey, privKey, r, s = ElGamalSignatureGen(alpha, p, m)\n",
+    "    print(f\"Alice PubKey: {pubKey}\")\n",
+    "    print(f\"Alice PrivKey: {privKey}\")\n",
     "    \n",
-    "    # TODO: Figure out Alice keygen for authentication"
+    "    # Alice sends Bob signature and message\n",
+    "    if (alterMessage):\n",
+    "        m = m ^ privKey\n",
+    "    verification = ElGamalSigVerify(pubKey, r, s, m)\n",
+    "    return verification\n",
+    "    \n",
+    "alpha = 2\n",
+    "p = 102188617217178804476387977160129334431745945009730065519337094992129677228373\n",
+    "goodAuth = ElGamalAuth(alpha, p, m=123456, alterMessage=False)\n",
+    "badAuth = ElGamalAuth(alpha, p, m=123456, alterMessage=True)\n",
+    "print(f\"Unaltered Message Authentication Successful: {goodAuth}\")\n",
+    "print(f\"Altered Message Authentication Successful: {badAuth}\")"
    ]
   },
   {
@@ -166,12 +349,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c32c13fe",
+   "cell_type": "markdown",
+   "id": "379e178e-adbe-4c45-bd96-ec25b9b66edb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "A **replay attack** is an attack in which an eavesdropper (Eve) records and *replays* information (e.g. hash, ticket, etc.) during a communication between two parties (Alice and Bob) in order to bypass security protocols. This attack is typically implemented as part of a **Man in the Middle (MitM)** attack. \n",
+    "\n",
+    "To protect against these kinds of attacks, secure communication protocols typically include some kind of nonce or timestamp. \n",
+    "In this example, Alice and Bob perform a key exchange using RSA. Alice and Bob know each other's public keys, and the ciphertext they share is in the form of a token that can be used to \"authenticate\" themselves for a service. However, Eve is listening over their communication channel and intercepts the ciphertext of the token, which she then replays in order to access the service. In a non-timestamped cryptosystem, this should allow Eve to authenticate with Bob's service without having to attack the cryptography of the secret itself. In a timestamped cryptosystem, the timestamp feature embedded within the ciphertext should prevent Eve from being able to authenticate with Bob's service. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "157373be-9283-4cb4-918a-a47da11794bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Performing non-replay experiment on vulnerable cryptosystem...\n",
+      "Successful authentication!\n",
+      "Performing replay experiment on vulnerable cryptosystem...\n",
+      "Successful authentication!\n",
+      "Replay attack successful!\n",
+      "Finished experiments\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Helper function to get timestamp\n",
+    "def timestamp():\n",
+    "    return int(time.time()*100)\n",
+    "\n",
+    "# RSA Encryption\n",
+    "def RSA_encrypt(m, ke):\n",
+    "    #msg = int.from_bytes(bytes(m, 'utf-8'), 'little')\n",
+    "    e, n = ke[0], ke[1]\n",
+    "    c = exponentiation(m, e, n)\n",
+    "    return c\n",
+    "    \n",
+    "# RSA Decryption\n",
+    "def RSA_decrypt(c, kd):\n",
+    "    d, n = kd[0], kd[1]\n",
+    "    msg = exponentiation(c, d, n)\n",
+    "    #msg = m.to_bytes((m.bit_length() + 7) // 8, 'little').decode('utf-8')\n",
+    "    return msg\n",
+    "    \n",
+    "# Demonstrate vulnerable non-timestamped cryptosystem\n",
+    "def VulnerableCryptosystem(keB, kdB, replayAttack=False):\n",
+    "    # Note: Alice and Bob perform secure key exchange beforehand to agree on token\n",
+    "    \n",
+    "    # Alice sends token to Bob\n",
+    "    token = 1234\n",
+    "    c = RSA_encrypt(token, keB)\n",
+    "\n",
+    "    # Eve intercepts ciphered token\n",
+    "    token_eve = c\n",
+    "\n",
+    "    # Bob receives Alice's original token and decrypts it with his private key\n",
+    "    token_bob = RSA_decrypt(c, kdB)\n",
+    "    if (token_bob == 1234):\n",
+    "        print(\"Successful authentication!\")\n",
+    "    else:\n",
+    "        print(\"Authentication unsuccessful!\")\n",
+    "\n",
+    "    # If a replay attack is performed, Eve replays the recovered token to authenticate with Bob's service\n",
+    "    if (replayAttack):\n",
+    "        token_replay = RSA_decrypt(token_eve, kdB) # Bob receives ciphertext from Eve\n",
+    "        if (token_replay == 1234):\n",
+    "            print(\"Replay attack successful!\")\n",
+    "        else:\n",
+    "            print(\"Replay attack unsuccessful!\")\n",
+    "\n",
+    "# Demonstrate improved timestamped cryptosystem\n",
+    "def TimestampedCryptosystem(keB, kdB, replayAttack=False):\n",
+    "    # Note: Alice and Bob perform secure key exchange beforehand to agree on token\n",
+    "\n",
+    "    # Alice sends token with timestamp to Bob\n",
+    "    # TODO: Figure out how to add timestamp to cipher\n",
+    "    token = 1234\n",
+    "    c = RSA_encrypt(token, keB)\n",
+    "\n",
+    "    # Eve intercepts ciphered token\n",
+    "    token_eve = c\n",
+    "\n",
+    "    # Bob receives Alice's original token and decrypts it with his private key\n",
+    "    # TODO: Figure out how to decrypt ciphertext with timestamp\n",
+    "    token_bob = RSA_decrypt(c, kdB)\n",
+    "    if (token_bob == 1234):\n",
+    "        print(\"Successful authentication!\")\n",
+    "    else:\n",
+    "        print(\"Authentication unsuccessful!\")\n",
+    "\n",
+    "    # If a replay attack is performed, Eve replays the recovered token to authenticate with Bob's service\n",
+    "    if (replayAttack):\n",
+    "        token_replay = RSA_decrypt(token_eve, kdB) # Bob receives ciphertext from Eve\n",
+    "        if (token_replay == 1234):\n",
+    "            print(\"Replay attack successful!\")\n",
+    "        else:\n",
+    "            print(\"Replay attack unsuccessful!\")\n",
+    "\n",
+    "p = 61\n",
+    "q = 53 \n",
+    "keB, kdB = RSA_key_generate(p, q)\n",
+    "print(\"Performing non-replay experiment on vulnerable cryptosystem...\")\n",
+    "VulnerableCryptosystem(keB, kdB, replayAttack=False)\n",
+    "print(\"Performing replay experiment on vulnerable cryptosystem...\")\n",
+    "VulnerableCryptosystem(keB, kdB, replayAttack=True)\n",
+    "#print(\"Performing non-replay experiment on timestamped cryptosystem...\")\n",
+    "#TimestampedCryptosystem(keB, kdB, replayAttack=False)\n",
+    "#print(\"Performing replay experiment on timestamped cryptosystem...\")\n",
+    "#TimestampedCryptosystem(keB, kdB, replayAttack=True)\n",
+    "print(\"Finished experiments\")"
+   ]
   }
  ],
  "metadata": {
@@ -190,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
